@@ -267,9 +267,9 @@ static __inline void softCall(u32 pc) {
 	// This should be considered a temporary fix; after all, we do not
 	// know how much space below sp is in use.  It may be worth considering
 	// creating a new stack for interrupt handlers.
-	sp -= 128;
+	sp -= 256;
 	while (pc0 != 0x80001000) psxCpu->ExecuteBlock();
-	sp += 128;
+	sp += 256;
 }
 
 static __inline void softCall2(u32 pc) {
